# skillos

./: .env.example  .gitignore  CONTRIBUTING.md  DIVERGENCES.md  JOURNAL.md  LICENSE  README.md  pyproject.toml  run.sh  run_algo1.sh  run_algo1_fft.sh  run_algo1_fft_curriculum.sh  run_algo1_fft_natural.sh  run_algo1_fft_seed3.sh  run_algo1_v7_lora_kl.sh  run_algo1_v8_lora_kl.sh  run_fft.sh  run_pathb.sh  run_reasoning_fft.sh
configs/: accelerate_zero3.yaml  alfworld_8xh100.yaml  alfworld_8xh100_algo1.yaml  alfworld_8xh100_algo1_fft.yaml  alfworld_8xh100_algo1_fft_seed2.yaml  alfworld_8xh100_algo1_fft_seed3.yaml  alfworld_8xh100_algo1_v6_kl.yaml  alfworld_8xh100_algo1_v7_lora_kl.yaml  alfworld_8xh100_algo1_v8_lora_kl.yaml  alfworld_8xh100_fft.yaml  alfworld_8xh100_pathb_smoke.yaml  alfworld_algo1_smoke.yaml  alfworld_env.yaml  alfworld_lora_pilot.yaml  alfworld_multi_gpu.yaml  alfworld_paper.yaml  alfworld_paper_scaled.yaml  alfworld_single_gpu.yaml  alfworld_small_gpu.yaml  debug.yaml  infsh_smoke.yaml  loss_check.yaml  reasoning_8xh100_algo1_fft.yaml  smoke_resume.yaml  wandb_smoke.yaml
docs/: postmortem-2026-06-10-algo1-group-collapse.md  repro_report.md  skillos_paper.md  training_notes.md  x_thread.md
legacy/: debug_checkpoint_resume.py  debug_executor_audit.py  probe_curator_multisample.py  run.sh  run_algo1_v6_kl.sh  run_fft.sh  run_full_eval_D.sh  run_pathb.sh  run_seed2_sweep.sh  trace_failed_episode.py
scripts/: analyze_sweep.py  compare_eval_arms.py  curriculum_sweep_supervisor.sh  debug_checkpoint_resume.py  debug_judge_reasoning_bench.py  infsh_cost.sh  (+19 more)
(+39 files in other folders)
